--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>郭增喜</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <h1>郭增喜</h1>
+    <img class="waitme" src="https://avatars2.githubusercontent.com/u/29121788?v=4&u=62a9e805298d450e26509191ce84200e14d08b0e&s=400"
+    width="100%">
   </body>
 </html>
